--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "llm-perf-tools"
 version = "0.1.0"
 description = "Tool for monitoring LLM inference metrics"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["codepydog <codepydog@gmail.com>"]
 readme = "README.md"
 packages = [{include = "llm_perf_tools", from = "src"}]
 
@@ -16,9 +16,18 @@ python-dotenv = "^1.1.1"
 pytest = "^8.4.2"
 pytest-mock = "^3.15.0"
 pytest-asyncio = "^1.1.0"
+pytest-doctestplus = "^1.4.0"
 ruff = "^0.12.12"
 mypy = "^1.17.1"
 pytest-cov = "^7.0.0"
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.0.0"
+sphinx-rtd-theme = "^2.0.0"
+
+[tool.pytest.ini_options]
+addopts = "--doctest-modules"
+doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
 
 [build-system]
 requires = ["poetry-core"]
