--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10,<3.14"
 openai = ">=1.107.0"
 pydantic = ">=2.11.7"
 python-dotenv = "^1.1.1"
+rich = "^14.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.2"
